# mcp-rag-ollama

./: .env  .env sample  .gitignore  LICENCE.md  README.md  pyproject.toml  requirements.txt
app/: Dockerfile  agent.py  agent_orchestrator.py  config.py  docker-compose.yaml  mcp_server.py  rag.py  reponse.txt  response_analysis.txt  search.py
app/utils/: __init__.py  logging_service.py  logging_utils.py
